# dwellir-harvester

./: .gitignore  MANIFEST.in  NEW_COLLECTOR_PLUGIN_DEVELOPMENT.md  README.md  RELEASING.md  out.reth.json  polkadot  pyproject.toml  test_collector.py
scripts/: dwellir-harvester.service  install-service.sh  start-harvester.sh  uninstall-service.sh
snap/: snapcraft.yaml
snap/hooks/: configure
src/blockchain_collector/: __init__.py  cli.py  core.py  daemon.py
src/blockchain_collector/collectors/: __init__.py  _reth_common.py  _substrate_common.py  aptos.py  dummychain.py  example_geth.py  null.py  polkadot.py  reth.py  reth_bera.py  reth_op.py  substrate.py  substrate_ajuna.py
src/blockchain_collector/data/: blockchain_node_metadata.schema.json
src/dwellir_harvester/: __main__.py  __version__.py  cli.py  core.py  custom_types.py  daemon.py  journalctl.py  systemctl_status.py  systemd_utils.py
src/dwellir_harvester/collectors/: __init__.py  _reth_common.py  collector_base.py  dummychain.py  host.py  null.py  polkadot.py  reth.py  reth_bera.py  reth_op.py  substrate.py  substrate_ajuna.py
src/dwellir_harvester_app/: __init__.py  __version__.py
tests/: test_collector_aptos.py  test_collector_polkadot.py  test_collectors_reth_variants.py  test_collectors_substrate_variants.py
