[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blockchain-collector"
version = "0.1.0"
description = "Extensible collectors that gather blockchain node metadata into a JSON file following a shared schema."
authors = [{ name = "Your Team", email = "ops@example.com" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["jsonschema>=4.18"]
license = { text = "MIT" }
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Topic :: Internet",
  "Topic :: System :: Distributed Computing",
]

[project.scripts]
blockchain-collector = "blockchain_collector.cli:main"
collector-metadata-daemon = "blockchain_collector.daemon:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
blockchain_collector = ["data/*.json"]