[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dwellir-harvester"
version = "0.0.3"
description = "Collector framework to collect data from running Dwellir server nodes."
authors = [{ name = "Dwellir OPS", email = "ops@dwellir.com" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dwellir-harvester-lib>=0.0.1",
    "importlib-resources>=5.0.0; python_version < '3.9'"
]
license = { text = "MIT" }
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Topic :: Internet",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.12.0",
    "black>=21.5b2",
    "isort>=5.8.0",
    "mypy>=0.812",
]

[project.scripts]
dwellir-harvester = "dwellir_harvester_app.cli:main"
dwellir-harvester-daemon = "dwellir_harvester_app.daemon:main"

[tool.setuptools]
package-dir = {"" = "src"}
license-files = []  # disable auto license-file metadata emission

[tool.setuptools.packages.find]
where = ["src"]
include = ["dwellir_harvester_app", "dwellir_harvester_app.*"]
